# morphologyAPIwLLM

./: .gitignore  README.md  pyproject.toml
scripts/: live_check.py
src/morphology_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/morphology_service/: main.py
src/morphology_service/api/v1/: routes.py  schemas.py
src/morphology_service/core/: config.py
src/morphology_service/services/: hfst_backend.py  llm_client.py  morphology.py  rule_engine.py
tests/: test_morphology_service.py
