[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "morphology-api"
version = "0.1.0"
description = "LLM-backed morphology REST API inspired by Ultralingua."
authors = [{ name = "Morphology API Team" }]
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.111.0,<1.0.0",
    "uvicorn[standard]>=0.29.0,<1.0.0",
    "pydantic>=2.7.0,<3.0.0",
    "pydantic-settings>=2.2.1,<3.0.0",
    "httpx>=0.27.0,<1.0.0",
    "llm>=0.12,<1.0.0",
    "llm-gemini>=0.1.0,<1.0.0",
    "tenacity>=8.2.3,<9.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.1.0,<9.0.0",
    "pytest-asyncio>=0.23.6,<1.0.0",
    "httpx>=0.27.0,<1.0.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src"]
